<resources>
    <string name="app_name">Powwow</string>
    <string name="title_activity_home">Discussion Forum</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="action_settings">Settings</string>
    <string name="no_files">No Files Found</string>
    <string-array name="branch_arrays">
        <item>Electrical Engineering</item>
        <item>Information Technology</item>
        <item>Civil</item>
        <item>Mechanical</item>
        <item>Computer Science</item>
        <item>ECE</item>
        <item>Chemical</item>
        <item>Applied Mathematics</item>
        <item>Other</item>
    </string-array>
    <string name="branch_prompt">Electrical</string>
    <string name="auth_failed">Authentication Failed</string>
    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="empty_list">No Data</string>
    <string name="empty_news">No news found</string>
    <string name="description_discussion_list">Discussion List</string>
    <string name="description_books_list">Books List</string>
    <string name="description_download_list">Download List</string>
    <string name="news_category">Category: </string>
    <string name="news_contributors">Contributors: </string>
    <string name="home_overflow_refresh">Refresh</string>

    <!-- Nav Menu Items -->
    <string name="menu_item_forum">Forum</string>
    <string name="menu_item_upload">Upload</string>
    <string name="menu_item_download">Download</string>
    <string name="menu_item_chat">Chat</string>
    <string name="menu_item_bookshare">Share a book</string>
    <string name="menu_item_signout">Sign Out</string>
    <string name="menu_item_booklist">Books List</string>
    <string name="menu_item_news">News</string>
    <string name="menu_item_share">Share App</string>
    <string name="menu_item_quiz">Quiz</string>
    <string name="menu_item_exit">Exit</string>

    <!-- Book Share Activity -->
    <string name="text_bookname">Book Name</string>
    <string name="text_owner">Your Name</string>
    <string name="text_quantity">Quantity</string>
    <string name="text_hostel">Hostel Name/Number</string>
    <string name="text_roomNo">Your Room Number</string>
    <string name="text_contacts">Your Contact Number</string>

    <string name="comment_hint">Post your Comment here…</string>
    <string name="submit">Submit</string>
    <string name="upload_book_text_header">Upload the details</string>
    <string name="description_widget_item_textview">Discussion Title</string>
    <string name="topic_text">Topic</string>
    <string name="description_text">Description</string>
    <string name="button_upload">Upload</string>
    <string name="hint_filename">File Name</string>
    <string name="nav_username">Username</string>
    <string name="hint_email">E-mail</string>
    <string name="hint_password">Password</string>
    <string name="login_button">Login</string>
    <string name="register_button">Register</string>
    <string name="startscreen_text_1">New User ? Register Here</string>
    <string name="startscreen_text_2">Already Registered? Login Here </string>
    <string name="more">More</string>

    <!-- Toast -->
    <string name="toast_books_failed_to_load">Failed to load books.</string>
    <string name="toast_comments_failed_to_load">Failed to load comments.</string>
    <string name="toast_files_failed_to_load">Failed to load files.</string>
    <string name="toast_empty_fields">Please fill the required field</string>
    <string name="toast_sent">Issue Created Successfully</string>
    <string name="toast_downloading">Downloading...</string>
    <string name="toast_downloaded">Downloaded</string>
    <string name="toast_signout">Signed Out</string>
    <string name="toast_loading">Loading Discussion List</string>
    <string name="toast_valid_email">Enter valid email address!</string>
    <string name="toast_valid_password">Password too short, enter minimum 6 characters!</string>
    <string name="toast_empty_password">Enter password!</string>
    <string name="toast_registered">Successfully Registered</string>
    <string name="toast_submitted">Book Details Submitted</string>
    <string name="toast_filename_req">Enter file name</string>
    <string name="toast_successfully_upload">Selected File Uploaded Successfully</string>
    <string name="title_activity_chat">ChatActivity</string>
    <string name="login">Login</string>
    <string name="Username">UserName</string>
    <string name="email">Email</string>
    <string name="Password">Password</string>
    <string name="go">Go</string>
    <string name="forgot_your_password">Forget Your Password?</string>
    <string name="register">Register</string>
    <string name="repeat_password">Confirm Password</string>

    <string name="default_notification_channel_id">Channel ID</string>

    <string name="usernameReg">Username</string>
    <string name="emailReg">Email</string>
    <string name="passwordReg">Password</string>
    <string name="sign_upReg">Sign up</string>
    <string name="sign_inLog">Sign in</string>
    <string name="signin_redirect">Already a member? Sign in!</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="signup_redirect">Don\'t have an account? Register here!</string>
    <string name="text_ques">Que.\n</string>
    <string name="upload_screen_hint">You can upload files here which would be visible to all the user.You can share different types of files,e.g .jpg, .png, .pdf, .apk etc.\nYou just need to type file name in file name field. Do not enter file format.\nThen just select your file and it would be uploaded in a while.</string>
    <string name="new_discussion_screen_hint">You can create new discussions here. First field should be Discussion Title and Second field is discussion
        description.Make sure you enter proper and understandable topics.So that other user can participate in discussion.\nInappropriate discussion
        topics would be removed immediately.</string>
    <string name="test_begin_in_seconds">Please Hold on....\n\nWe are preparing questions List for you.\n\nYour Test Will begin few seconds...</string>
</resources>
