<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_forum"
            android:icon="@android:drawable/stat_notify_chat"
            android:title="@string/menu_item_forum"
            android:visible="false" />
        <item
            android:id="@+id/nav_upload"
            android:icon="@drawable/ic__menu_upload1"
            android:title="@string/menu_item_upload" />
        <!--android:icon="@android:drawable/stat_sys_upload"-->
        <item
            android:id="@+id/nav_download"
            android:icon="@drawable/ic__menu_download"
            android:title="@string/menu_item_download" />
        <!--android:icon="@android:drawable/stat_sys_download"-->
        <item
            android:id="@+id/nav_chat"
            android:icon="@android:drawable/sym_action_chat"
            android:title="@string/menu_item_chat"
            android:visible="false" />
        <item
            android:id="@+id/nav_book"
            android:icon="@drawable/ic__menu_share_book1"
            android:title="@string/menu_item_bookshare" />
        <!--android:icon="@android:drawable/btn_star_big_off"-->

        <item
            android:id="@+id/nav_booksList"
            android:icon="@drawable/ic_menu_book_list"
            android:title="@string/description_books_list" />
        <!--@android:drawable/ic_menu_search-->
        <item
            android:id="@+id/nav_news"
            android:icon="@drawable/ic_menu_news"
            android:title="@string/menu_item_news" />
        <!--@android:drawable/ic_menu_agenda-->
        <item
            android:id="@+id/nav_quiz"
            android:icon="@drawable/ic_menu_quiz"
            android:title="@string/menu_item_quiz" />
        <item
            android:id="@+id/nav_signout"
            android:icon="@drawable/ic__menu_signout"
            android:title="@string/menu_item_signout" />
        <!--@android:drawable/ic_menu_revert-->

    </group>

    <item android:title="@string/more">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic__menu_share_app"
                android:title="@string/menu_item_share" />
            <item
                android:id="@+id/nav_exit"
                android:icon="@drawable/ic__menu_exit"
                android:title="@string/menu_item_exit" />
        </menu>
    </item>

</menu>
