<?xml version="1.0" encoding="utf-8"?>


<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">


        <TextView
            android:id="@+id/tvNewDiscussionInstruction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_discussion_screen_hint"
            android:textColor="@color/blue"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/discussionTopic"
            style="@style/Widget.AppCompat.EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:ems="10"
            android:gravity="top"
            android:hint="@string/topic_text"
            android:imeOptions="actionNext"
            android:inputType="textMultiLine|textShortMessage"
            android:maxHeight="@android:dimen/thumbnail_height"
            android:scrollIndicators="right"
            android:scrollbars="vertical"
            android:theme="@style/MyEditText" />


        <EditText
            android:id="@+id/discussionDescription"
            style="@style/Widget.AppCompat.EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="top"
            android:hint="@string/description_text"
            android:imeOptions="actionDone"
            android:inputType="textMultiLine"
            android:maxHeight="@android:dimen/thumbnail_height"
            android:scrollIndicators="right"
            android:scrollbars="vertical"
            android:theme="@style/MyEditText" />

        <Button
            android:id="@+id/discussionSubmitButton"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/btnsignup_gradient"
            android:text="@string/submit" />
    </LinearLayout>
</ScrollView>