<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.desire.powwow.Upload">


    <LinearLayout
        android:id="@+id/upload_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="visible">

          <TextView
              android:id="@+id/tvUploadInstruction"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/upload_screen_hint"
              android:textAlignment="center"
              android:textColor="@color/blue"
              android:textSize="18sp"
              android:textStyle="bold"
              />

        <TextView
            android:id="@+id/tvValidFile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:drawableLeft="@android:drawable/checkbox_on_background"
            android:drawablePadding="5dp"
            android:drawableStart="@android:drawable/checkbox_on_background"
            android:gravity="start"
            android:text="Valid File Name: Wings of Fire"
            android:textAlignment="textStart"
            android:textColor="@color/green"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tvInvalidFile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:drawableLeft="@android:drawable/ic_menu_close_clear_cancel"
            android:drawablePadding="5dp"
            android:drawableStart="@android:drawable/ic_menu_close_clear_cancel"
            android:gravity="start"
            android:text="Valid File Name: Wings of Fire.pdf"
            android:textAlignment="textStart"
            android:textColor="@color/red"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/upload_filename"
            style="@style/Widget.AppCompat.EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:hint="@string/hint_filename"
            android:inputType="textPersonName"
            android:maxLines="1"
            android:singleLine="true" />

        <Spinner
            android:id="@+id/spinner2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp" />

        <Button
            android:id="@+id/btnUpload"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@drawable/btnsignin_gradient"
            android:text="@string/button_upload"
            android:textColor="@color/white" />
    </LinearLayout>

    <ProgressBar
        android:id="@+id/loading_indicator"
        style="@style/Widget.AppCompat.ProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone" />

    <TextView
        android:id="@+id/text_wait"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/loading_indicator"
        android:layout_centerInParent="true"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp"
        android:textStyle="bold"
        android:visibility="gone" />
</RelativeLayout>
